Fixed overflow issue

--- a/src/style.css
+++ b/src/style.css
@@ -512,5 +512,4 @@ a:active {
 		inset 0 1px 0 rgba(255, 255, 255, 0.5),
 		inset 0 -1px 0 rgba(255, 255, 255, 0.1),
 		inset 0 0 0px 0px rgba(255, 255, 255, 0);
-	overflow: hidden;
 }
